--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,23 +8,29 @@ workflows:
           filters:
             branches:
               only:
-                -main
+                - main
 
+
+
+# Define the jobs we want to run for this project
 jobs:
-  build:  
+  build:
     working_directory: ~/ExampleApplication
     docker:
-      - image: circleci/node:10.16.3
+      - image: circleci/node:latest
     steps:
       - checkout
-      - run:
+      - run: 
           name: update-npm
-          command: 'sudo npm install -g npm@5'
+          command: 'sudo npm install -g npm@8.1.4'
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: install-npm
-          command: npm install
+          command: npm install       
+      - run:
+          name: test-run
+          command: npm run test
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
