--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,10 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+  deploy:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - run:
+        name: deploy-ExampleApplication
+        command: ssh -o StrictHostKeyChecking=no $EC2_DevOpsSec@EC2_PUBLIC_DNS "rm -rf ExampleApplication/;git clone https://github.com/DGGZNCI/ExampleApplication.git; source ExampleApplication/deploy.sh"
