--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,11 @@ jobs:
       - image: circleci/node:10.16.3
     steps:
       - run:
-          name: deploy-ExampleApplication
-          command: ssh -o StrictHostKeyChecking=no $EC2_DevOpsSec@$EC2_PUBLIC_DNS "rm -rf ExampleApplication/;git clone https://github.com/DGGZNCI/ExampleApplication.git; source ExampleApplication/deploy.sh"
+          name: deploy-application
+          command: |
+            ssh -o StrictHostKeyChecking=no $EC2_DevOpsSec@$EC2_PUBLIC_DNS "
+              rm -rf ExampleApplication &&
+              git clone https://github.com/DGGZNCI/ExampleApplication.git &&
+              cd ExampleApplication &&
+              bash deploy.sh
+            "
