--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,8 @@ jobs:
       - run:
           name: deploy-application
           command: |
-            ssh -o StrictHostKeyChecking=no ec2-user@$EC2_PUBLIC_DNS "
+            ssh -o StrictHostKeyChecking=no $EC2_DevOpsSec@$EC2_PUBLIC_DNS "
               rm -rf ExampleApplication/;
               git clone https://github.com/DGGZNCI/ExampleApplication.git;
-              cd ExampleApplication;
-              bash deploy.sh
+              source ExampleApplication/deploy.sh
             "
